mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_return_outside_func.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux run /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_return_outside_func.mux`
error: Cannot use 'return' outside of a function
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_return_outside_func.mux:2:8
   |
 2 | return 5
   |        ^
